--- a/duplicate-finder/duplicate-finder/Views/Home/Index.cshtml
+++ b/duplicate-finder/duplicate-finder/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    <form asp-controller="Home" asp-action="InputProcessingResult" method="get">
+        <input name="input" type="text" />
+        <input type="submit" class="btn btn-primary" value="Process input" />
+    </form>
 </div>
