Added array processing logic

--- a/duplicate-finder/duplicate-finder/Views/InputProcessing/InputProcessingResult.cshtml
+++ b/duplicate-finder/duplicate-finder/Views/InputProcessing/InputProcessingResult.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-    <form asp-controller="Home" asp-action="InputProcessingResult" method="get">
+    <form asp-controller="InputProcessing" asp-action="InputProcessingResult" method="get">
         <input name="input" type="text"/>
         <input type="submit" class="btn btn-primary" value="Process input"/>
     </form>
